python/testData/inspections/PyRedundantParenthesesInspection/SyntaxErrorInside.py

def pycharm_hanger_method(a, b):
    if(<error descr="Unexpected expression syntax">!m_<caret>isReverse</error>)<error descr="Colon expected">{
        m_startPoint = startPoint
    } else {
        m_endPoint = startPoint
    }</error>